# nprobust

./: .gitattributes  .gitignore  CHANGELOG.md  README.md
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish-python.yml
Python/: nprobust_data.csv  nprobust_illustration.py
Python/nprobust/: LICENSE.md  README.md  setup.cfg
Python/nprobust/src/nprobust/: __init__.py  _bw.py  _helpers.py  _kernels.py  _lpbwce.py  kdbwselect.py  kdrobust.py  lpbwselect.py  lprobust.py  plot.py
Python/nprobust/tests/: conftest.py  test_bandwidth.py  test_covgrid.py  test_kdrobust.py  test_numerical_contracts.py  test_point_estimates.py  test_tidy_plot.py  test_variance.py  test_weights.py
R/: commands.txt  nprobust_illustration.R
R/nprobust/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  codemeta.json
R/nprobust/R/: RcppExports.R  kdrobust.R  (+6 more)
stata/: kdbwselect.ado  kdbwselect.sthlp  kdrobust.ado  kdrobust.sthlp  lnprobust.mlib  lpbwselect.ado  lpbwselect.sthlp  lprobust.ado  lprobust.sthlp  nprobust.pkg  nprobust_K_fun.mo  nprobust_L_fun.mo  nprobust_data.dta  nprobust_functions.do  nprobust_illustration.do  nprobust_lp_brent_cedpi.mo  nprobust_lp_brent_mserot.mo  nprobust_lp_bw.mo  nprobust_lp_cer.mo  nprobust_lp_cluster_meat.mo  nprobust_lp_coef.mo  nprobust_lp_constants.mo  nprobust_lp_kmom1.mo  nprobust_lp_kmom2.mo  nprobust_lp_kweight.mo  nprobust_lp_mse.mo  nprobust_lp_mse_dpi.mo  nprobust_lp_mse_imse.mo  nprobust_lp_q.mo  nprobust_lp_res.mo  nprobust_lp_vce.mo  nprobust_w_fun.mo  stata.toc
(+32 files in other folders)
