[metadata]
name = nprobust_pkg
version = 1.0.0
author = Sebastian Calonico, Matias D. Cattaneo, Max H. Farrell
author_email = scalonico@ucdavis.edu, matias.d.cattaneo@gmail.com, mhfarrell@gmail.com
maintainer = Sebastian Calonico
maintainer_email = scalonico@ucdavis.edu
license = GPL-3.0-only
license_files = LICENSE.md
description = Estimation, inference, bandwidth selection, and graphical procedures for kernel density and local polynomial regression methods.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nppackages/nprobust
project_urls =
	Bug Tracker = https://github.com/nppackages/nprobust/issues
	Documentation = https://nppackages.github.io/
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
	numpy>=1.22
	pandas>=1.4
	scipy>=1.8

[options.extras_require]
plot = matplotlib>=3.5
test = pytest>=7

[options.packages.find]
where = src

[egg_info]
tag_build =
tag_date = 0
